--- a/ios/HOSEO_NEULBOM_FE/Info.plist
+++ b/ios/HOSEO_NEULBOM_FE/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>HOSEO_NEULBOM_FE</string>
+	<string>늘봄학교</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
