--- a/ios/HOSEO_NEULBOM_FE/Info.plist
+++ b/ios/HOSEO_NEULBOM_FE/Info.plist
@@ -39,6 +39,13 @@
             </dict>
         </dict>
 
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>kakaomap</string>
+        <string>nmap</string>
+        <string>tmap</string>
+    </array>
+
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string/>
 	<key>UILaunchStoryboardName</key>
