--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.76.5",
     "react-native-device-info": "^14.0.2",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-image-modal": "^3.0.13",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
