--- a/ios/HOSEO_NEULBOM_FE/Info.plist
+++ b/ios/HOSEO_NEULBOM_FE/Info.plist
@@ -46,6 +46,15 @@
         <string>tmap</string>
     </array>
 
+
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>사진 업로드를 위해 접근 권한이 필요합니다.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>사진 촬영을 위해 카메라 접근 권한이 필요합니다.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>오디오 녹음을 위해 마이크 접근 권한이 필요합니다.</string>
+
+
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string/>
 	<key>UILaunchStoryboardName</key>
