--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-device-info": "^14.0.2",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-image-modal": "^3.0.13",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0",
+    "react-native-share": "^12.0.3",
     "react-native-svg": "^15.10.1",
     "react-native-webview": "^13.12.5"
   },
