--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.gbnam.neulbom",
-  "version": "0.3.0",
+  "version": "0.6.0-beta",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
