--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <queries>
+        <package android:name="net.daum.android.map"/>
+        <package android:name="com.nhn.android.nmap"/>
+        <package android:name="com.skt.tmap.ku"/>
+    </queries>
+
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
