--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-firebase/app": "^21.12.2",
+    "@react-native-firebase/messaging": "^21.12.2",
     "@react-native/gradle-plugin": "^0.78.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
