--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.gbnam.neulbom",
-  "version": "2.1.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -10,44 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/netinfo": "^11.4.1",
-    "@react-native/gradle-plugin": "^0.78.0",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/stack": "^7.1.1",
-    "react": "18.3.1",
-    "react-native": "0.76.5",
-    "react-native-device-info": "^14.0.2",
-    "react-native-document-picker": "^9.3.1",
-    "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.21.2",
-    "react-native-image-modal": "^3.0.13",
-    "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "^3.16.6",
-    "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "^4.4.0",
-    "react-native-share": "^12.0.3",
-    "react-native-svg": "^15.10.1",
-    "react-native-webview": "^13.12.5"
+    "react": "19.0.0",
+    "react-native": "0.79.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "15.0.1",
-    "@react-native-community/cli-platform-android": "15.0.1",
-    "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.76.5",
-    "@react-native/eslint-config": "0.76.5",
-    "@react-native/metro-config": "0.76.5",
-    "@react-native/typescript-config": "0.76.5",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
+    "@react-native-community/cli": "18.0.0",
+    "@react-native-community/cli-platform-android": "18.0.0",
+    "@react-native-community/cli-platform-ios": "18.0.0",
+    "@react-native/babel-preset": "0.79.3",
+    "@react-native/eslint-config": "0.79.3",
+    "@react-native/metro-config": "0.79.3",
+    "@react-native/typescript-config": "0.79.3",
+    "@types/jest": "^29.5.13",
+    "@types/react": "^19.0.0",
+    "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-native-svg-transformer": "^1.5.0",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
   "engines": {
