--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.gbnam.neulbom",
-  "version": "0.0.1",
+  "version": "2.2.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -10,8 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native/gradle-plugin": "^0.78.0",
+    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/stack": "^7.3.3",
     "react": "19.0.0",
-    "react-native": "0.79.3"
+    "react-native": "0.79.3",
+    "react-native-device-info": "^14.0.2",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-image-modal": "^3.0.13",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.16.6",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
+    "react-native-share": "^12.0.3",
+    "react-native-svg": "^15.12.0",
+    "react-native-webview": "^13.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -30,6 +45,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
